kubernetes/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-instance
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: kafka-modified:latest
        ports:
        - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  selector:
    app: kafka
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
