kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
  - hosts:
    - chatapp.test
    secretName: tls-secret
  rules:
  - host: chatapp.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 443
      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: chat-service
            port:
              number: 80
